Fix transition on tablet and mobile

--- a/src/css/partials/hero.css
+++ b/src/css/partials/hero.css
@@ -47,6 +47,11 @@
     inset 0 2px 1px 0 rgba(255, 255, 255, 0.25),
     inset 0 32px 24px 0 rgba(255, 255, 255, 0.05);
   background-color: #6f4e37;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hero-link:active {
+  box-shadow: none;
 }
 
 @media only screen and (min-width: 768px) {
@@ -89,9 +94,5 @@
   .hero-link:hover,
   .hero-link:focus {
     opacity: 0.5;
-  }
-
-  .hero-link:active {
-    box-shadow: none;
   }
 }
